<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/current_weather">

    <fragment
        android:id="@+id/current_weather"
        android:name="ru.stolexiy.openweather.ui.weather.current.CurrentWeatherFragment"
        android:label="@string/now" />
    <fragment
        android:id="@+id/forecast_weather"
        android:name="ru.stolexiy.openweather.ui.weather.forecast.ForecastWeatherFragment"
        android:label="@string/forecast" />
    <fragment
        android:id="@+id/weather_details"
        android:name="ru.stolexiy.openweather.ui.weather.details.WeatherDetailsFragment"
        android:label="@string/details" />
</navigation>