<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ru.stolexiy.openweather.R" />

        <variable
            name="currentWeather"
            type="ru.stolexiy.openweather.ui.weather.current.CurrentWeather" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/main_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/main_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@{currentWeather.dateStr}"
                            android:textAppearance="@style/TextAppearance.OpenWeather.Subtitle"
                            app:layout_constraintEnd_toStartOf="@+id/time"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="16.07.2023" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:gravity="start"
                            android:text="@{currentWeather.timeStr}"
                            android:textAppearance="@style/TextAppearance.OpenWeather.Subtitle"
                            app:layout_constraintBottom_toBottomOf="@id/date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/date"
                            app:layout_constraintTop_toTopOf="@id/date"
                            tools:text="10:28" />

                        <TextView
                            android:id="@+id/temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@{currentWeather.temp}"
                            android:textAppearance="?attr/textAppearanceDisplayLarge"
                            app:layout_constraintEnd_toStartOf="@+id/weather_icon"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/date"
                            tools:text="+26oC" />

                        <TextView
                            android:id="@+id/weather_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:drawableTopCompat="@drawable/sunny"
                            app:layout_constraintBottom_toBottomOf="@id/temp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/temp"
                            app:layout_constraintTop_toTopOf="@id/temp"
                            tools:text="Ясно" />

                        <TextView
                            android:id="@+id/humidity_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:gravity="center"
                            android:text="@string/humidity"
                            android:textAppearance="?attr/textAppearanceLabelMedium"
                            app:layout_constraintEnd_toStartOf="@+id/wind_speed_label"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/temp" />

                        <TextView
                            android:id="@+id/wind_speed_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/wind_speed"
                            android:textAppearance="?attr/textAppearanceLabelMedium"
                            app:layout_constraintBottom_toBottomOf="@+id/humidity_label"
                            app:layout_constraintEnd_toStartOf="@+id/pressure_label"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/humidity_label"
                            app:layout_constraintTop_toTopOf="@+id/humidity_label" />

                        <TextView
                            android:id="@+id/pressure_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/pressure"
                            android:textAppearance="?attr/textAppearanceLabelMedium"
                            app:layout_constraintBottom_toBottomOf="@+id/wind_speed_label"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/wind_speed_label"
                            app:layout_constraintTop_toTopOf="@+id/wind_speed_label" />

                        <TextView
                            android:id="@+id/humidity_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:gravity="center"
                            android:text='@{currentWeather.humidity ?? "—"}'
                            android:textAppearance="?attr/textAppearanceHeadlineSmall"
                            app:layout_constraintEnd_toStartOf="@+id/visibility_value"
                            app:layout_constraintStart_toStartOf="@id/humidity_label"
                            app:layout_constraintTop_toBottomOf="@+id/humidity_label"
                            tools:text="44%" />

                        <TextView
                            android:id="@+id/visibility_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text='@{currentWeather.windSpeed ?? "—"}'
                            android:textAppearance="?attr/textAppearanceHeadlineSmall"
                            app:layout_constraintBottom_toBottomOf="@+id/humidity_value"
                            app:layout_constraintEnd_toStartOf="@+id/pressure_value"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/humidity_value"
                            app:layout_constraintTop_toTopOf="@+id/humidity_value"
                            tools:text="5 м/с" />

                        <TextView
                            android:id="@+id/pressure_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text='@{currentWeather.pressure ?? "—"}'
                            android:textAppearance="?attr/textAppearanceHeadlineSmall"
                            app:layout_constraintBottom_toBottomOf="@+id/visibility_value"
                            app:layout_constraintEnd_toEndOf="@+id/pressure_label"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/visibility_value"
                            app:layout_constraintTop_toTopOf="@+id/visibility_value"
                            tools:text="1000 гПа" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/sunrise_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/sunset_card"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/main_card"
                    app:layout_constraintTop_toBottomOf="@+id/main_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="35dp">

                        <TextView
                            android:id="@+id/sunrise_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise"
                            android:textAppearance="?attr/textAppearanceLabelMedium"
                            app:layout_constraintBottom_toTopOf="@+id/sunrise_icon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <ImageView
                            android:id="@+id/sunrise_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/sunrise"
                            app:layout_constraintBottom_toTopOf="@+id/sunrise_value"
                            app:layout_constraintEnd_toEndOf="@+id/sunrise_label"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="@+id/sunrise_label"
                            app:layout_constraintTop_toBottomOf="@+id/sunrise_label" />

                        <TextView
                            android:id="@+id/sunrise_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@{currentWeather.location.sunriseStr}"
                            android:textAppearance="?attr/textAppearanceHeadlineSmall"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/sunrise_icon"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="@+id/sunrise_icon"
                            app:layout_constraintTop_toBottomOf="@+id/sunrise_icon"
                            tools:text="04:06" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/sunset_card"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintBottom_toBottomOf="@id/sunrise_card"
                    app:layout_constraintEnd_toEndOf="@id/main_card"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/sunrise_card"
                    app:layout_constraintTop_toTopOf="@id/sunrise_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="35dp">

                        <TextView
                            android:id="@+id/sunset_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunset"
                            android:textAppearance="?attr/textAppearanceLabelMedium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/sunset_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/sunset"
                            app:layout_constraintEnd_toEndOf="@+id/sunset_label"
                            app:layout_constraintStart_toStartOf="@+id/sunset_label"
                            app:layout_constraintTop_toBottomOf="@+id/sunset_label" />

                        <TextView
                            android:id="@+id/sunset_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@{currentWeather.location.sunsetStr}"
                            android:textAppearance="?attr/textAppearanceHeadlineSmall"
                            app:layout_constraintEnd_toEndOf="@+id/sunset_icon"
                            app:layout_constraintStart_toStartOf="@+id/sunset_icon"
                            app:layout_constraintTop_toBottomOf="@+id/sunset_icon"
                            tools:text="21:05" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
